# Intelligent_typesetting

./: .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  env.example  example_structured.txt  install_ckip.py  install_gpu.py  output.txt  output_txt.README.md  pip.bat  pyproject.toml  requirements.txt  setup.py  test_ckip.py  test_gpu.py  test_improved_linebreak.txt  test_layout.json  test_structured_simple.txt  test_txt_format.py  test_txt_format_simple.py
config/: config.yaml
examples/: basic_usage.py  ckip_typesetting_demo.py
files/: input.txt
models/models--bert-base-chinese/refs/: main
src/: __init__.py  cli.py  config.py
src/models/: __init__.py  bert_model.py  ckip_processor.py  text_processor.py
src/utils/: __init__.py  file_utils.py  logger.py
tests/: __init__.py  test_text_processor.py
